# tjpgdec-rs

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  LICENSE  PUBLISH_CHECKLIST.md  README.en.md  README.md
.cargo/: config.toml
.github/workflows/: ci.yml
examples/: basic.rs  compare_outputs.ps1  jpg2bmp.rs  jpg2bmp_pool.rs  memory_comparison.rs  size_check.rs  test_info.rs  test_suite.rs
src/: decoder.rs  huffman.rs  idct.rs  lib.rs  pool.rs  tables.rs  types.rs
tjpgd_pc/: .gitignore  Makefile  QUICKSTART.md  README.md  benchmark.bat  benchmark.ps1  build.bat  build.ps1  main.c  test.bat  test.ps1  tjpgd.c  tjpgd.h  tjpgdcnf.h  文件清单.md  项目总结.md
