[package]
name = "tjpgdec-rs"
version = "0.4.0"
authors = ["JiaYe <planet2@qq.com>"]
edition = "2021"
license = "MIT OR Apache-2.0"
description = "Tiny JPEG Decompressor - A lightweight JPEG decoder optimized for embedded systems"
repository = "https://github.com/planet0104/tjpgdec-rs"
homepage = "https://github.com/planet0104/tjpgdec-rs"
documentation = "https://docs.rs/tjpgdec-rs"
readme = "README.md"
keywords = ["jpeg", "decoder", "embedded", "no_std", "image"]
categories = ["embedded", "multimedia::images", "no-std"]
exclude = [
    "tjpgd_pc/*",
    ".github/*",
    "target/*",
    "*.ps1",
    "PUBLISH_CHECKLIST.md"
]

[features]
default = ["std", "fast-decode-1"]
std = []

# JD_FASTDECODE optimization levels (matches C version exactly)
# - fast-decode-0: Basic optimization, suitable for 8/16-bit MCUs (3100 bytes workspace) [EXPERIMENTAL]
# - fast-decode-1: + 32-bit barrel shifter, suitable for 32-bit MCUs (3500 bytes workspace) [RECOMMENDED for ESP32]
# - fast-decode-2: + LUT for huffman decoding (9644 bytes workspace) [FASTEST, more memory]
fast-decode-0 = []  # Experimental: for 8/16-bit MCUs only
fast-decode-1 = []  # Recommended for 32-bit MCUs like ESP32
fast-decode-2 = []  # Fastest, uses more memory (6KB extra for LUT)
fast-decode = ["fast-decode-2"]  # Alias for backward compatibility

table-clip = []
use-scale = []
debug-huffman = ["std"]  # Enable debug output for Huffman decoding

[dependencies]
heapless = "0.8"

[dev-dependencies]
